sass/_base.scss
@use "vars";

// Core Styles
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

html,
body {
  text-rendering: optimizeLegibility;
  line-height: 1.5;
  font-size: 100%;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

body {
  font-family: vars.$font-family;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

// Layout
main,
aside {
  display: inline-flex;
  flex-direction: column;
  padding: 0.75rem;
  // border: solid 1px rebeccapurple;
}

aside {
  max-width: vars.$sidebar-width;
  position: fixed;
}

main {
  max-width: vars.$page-width;
  position: relative;
  left: vars.$sidebar-width;
  margin-bottom: 1.5rem;
}

.wrapper {
  width: vars.$full-page-width;
  margin: 0 auto;
}

// Footer (sidebar)
footer {
  &.footer-sidebar {
    position: fixed;
    bottom: 1.5rem;
    max-width: inherit;
    font-size: vars.$font-size-small;
  }
  &.footer-main {
    display: none;
  }
}
// Small Screens
@media only screen and (max-width: vars.$mobile-breakpoint) {
  .wrapper {
    width: auto;
  }
  aside {
    max-width: 100%;
    position: initial;
  }
  main {
    left: 0;
    margin-bottom: 0;
  }
  main,
  aside {
    display: flex;
  }
  footer {
    &.footer-sidebar {
      display: none;
    }
    &.footer-main {
      display: inline-flex;
      padding-bottom: 1.5rem;
      max-width: 100%;
    }
  }
  footer.footer-main p {
    text-align: center;
    width: vars.$full-page-width;
  }
}
// Improved typography
// Headins
h1 {
  font-size: 1.75rem;
  margin-top: 2.25rem;
  margin-bottom: 1rem;
}

h2 {
  font-size: 1.4rem;
  margin-top: 1.9rem;
  margin-bottom: 1rem;
}

h3 {
  font-size: 1.12rem;
  margin-top: 1.62rem;
  margin-bottom: 1rem;
}

h4,
h5,
h6 {
  font-size: 1rem;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

// Links
a {
  cursor: pointer;
  -webkit-transition: text-decoration-color 0.5s ease-in-out;
  -moz-transition: text-decoration-color 0.5s ease-in-out;
  -o-transition: text-decoration-color 0.5s ease-in-out;
  transition: text-decoration-color 1.5s ease-in-out;
  text-decoration: underline 0.2rem transparent;
}

a:hover {
  -webkit-transition: text-decoration-color 0.5s ease-in-out;
  -moz-transition: text-decoration-color 0.5s ease-in-out;
  -o-transition: text-decoration-color 0.5s ease-in-out;
  transition: text-decoration-color 0.5s ease-in-out;
  text-decoration-color: palevioletred;
  // text-underline-offset: 0.2em;
}

// Text Formatting
strong {
  font-weight: bold;
  line-height: inherit;
}

em,
i {
  font-style: italic;
  line-height: inherit;
}

// Tables
table {
  margin: 0 auto;
  border-collapse: collapse;
  max-width: 100%;
}

table thead th,
table tfoot th {
  background: rgba(0, 0, 0, 0.2);
}

table th,
table td {
  padding: 2px 6px;
  border: 1px solid gray;
}

// Code
pre {
  padding: 0.5rem;
  border-radius: 8px;
  overflow-x: auto;
  border: 1px solid lightgray;
}

code {
  border-radius: 3px;
  padding: 2px 2px;
  background: rgba(0, 0, 0, 0.05);
  font-size: vars.$font-size-small;
  line-height: 1;
}

kbd {
  border: 1px solid #c6cbd1;
  border-bottom-color: #959da5;
  box-shadow: inset 0 -1px 0 #959da5;
  border-radius: 3px;
  display: inline-block;
  line-height: 10px;
  padding: 4px;
  vertical-align: middle;
}

// Horizontal Line
hr {
  box-sizing: content-box;
  margin-top: 1rem;
  margin-bottom: 1rem;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #fff;
  clear: both;
  margin: 1.5rem auto;
}

// Images
img {
  display: inline-block;
  border-radius: 5px;
  -ms-interpolation-mode: bicubic;
  vertical-align: middle;
  max-width: 100%;
  margin: 1rem 0;
}

// Table of Contents
details {
  // border: 1px solid #aaa;
  cursor: pointer;
  border-radius: 4px;
  padding: 0.5em 0.5em 0;
  margin-top: 1rem;
}

summary {
  font-weight: bold;
  margin: -0.5em -0.5em 0;
  padding: 0.5em;
}

details[open] {
  padding: 0.5em;
}

details[open] summary {
  // border-bottom: 1px solid #aaa;
  margin-bottom: 0.5em;
}

// Blog post reading time
time {
  font-size: 0.9rem;
}

// Quotes
blockquote {
  border-left: solid 2px lightgray;
  padding-left: 1rem;
  margin-left: 1rem;
}

// Sidebar
.sidebar-title {
  color: vars.$font-color;
  margin-top: initial;
}

.sidebar-nav {
  list-style-type: none;
  padding-left: 1rem;
  line-height: 1.75;
}

// Table of Contents
.table-of-content {
  list-style-type: circle;
  font-size: vars.$font-size-small; //16px
  line-height: 1.75;
  // padding-left: 2rem;
  // padding-right: 0.5rem;
}

// Boxes and Shadows
.box {
  border-radius: 5px;
  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
}

.box:hover {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

